src/objects/Brand_Wise_Products_Available__c.object
<CustomObject>
    <fields>
        <fullName>Chemist__c</fullName>
        <label>Chemist</label>
        <referenceTo>Chemist__c</referenceTo>
        <relationshipName>Products_Available</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Details__c</fullName>
        <label>Product Details</label>
        <referenceTo>MSN_Product__c</referenceTo>
        <relationshipLabel>Brand Wise Products Available</relationshipLabel>
        <relationshipName>Brand_Wise_Products_Available</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Brand_wise__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Brand Wise Products Available</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Chemist__c</columns>
        <columns>Product_Details__c</columns>
        <columns>Quantity_Brand_wise__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Products Available Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Wise Products Available</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>